Build v 1.4.3 List command fixed SendCommandMessage and SendHoverMessage on MessengerUtils fixed

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -271,39 +271,6 @@ permissions:
   multicommands.enderchest.other:
     default: op
     description: other enderchest - permission
-  multicommands.economy.*:
-    default: op
-    description: economy - permission
-  multicommands.economy.balance:
-    default: true
-    description: economy balance - permission
-  multicommands.economy.deposit:
-    default: true
-    description: economy deposit - permission
-  multicommands.economy.set:
-    default: op
-    description: economy set - permission
-  multicommands.economy.reset:
-    default: op
-    description: economy reset - permission
-  multicommands.economy.withdraw:
-    default: true
-    description: economy withdraw - permission
-  multicommands.economy.bank.*:
-    default: op
-    description: economy bank - permission
-  multicommands.economy.bank.deposit:
-    default: true
-    description: economy bank deposit - permission
-  multicommands.economy.bank.create:
-    default: true
-    description: economy bank create - permission
-  multicommands.economy.bank.reset:
-    default: op
-    description: economy bank reset - permission
-  multicommands.economy.bank.withdraw:
-    default: true
-    description: economy bank withdraw - permission
   multicommands.furnace:
     default: true
     description: furnace - permission
@@ -403,7 +370,10 @@ permissions:
   multicommands.level.remove:
     default: true
     description: level - permission
-  multicommands.multiionfos:
+  multicommands.multihelp:
+    default: true
+    description: help - permission
+  multicommands.multiinfos:
     default: op
     description: infos - permission
   multicommands.mute:
