--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,9 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
+group = 'me.capitainecat0'
 def version = '1.6'
-
-shadowJar {
-    archiveName = "MultiCommands.jar"
-}
 
 repositories {
     mavenCentral()
@@ -20,10 +16,9 @@ repositories {
 }
 
 dependencies {
-    shadow 'io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT' // PaperMC
+    compileOnly 'io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT' // PaperMC
     compileOnly 'me.clip:placeholderapi:2.11.5' // PlaceHolderAPI
     compileOnly 'net.luckperms:api:5.0' // LuckPerms
-    shadow fileTree(dir: 'libs', include: '*.jar') // Fichier de build
     implementation 'com.google.code.gson:gson:2.10.1' // Json
     implementation 'net.kyori:adventure-platform-bukkit:4.3.0' // Adventure
     implementation 'net.kyori:adventure-api:4.13.1' // Adventure
@@ -44,8 +39,9 @@ java {
 }
 
 tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release = targetJavaVersion
+        options.release.set(targetJavaVersion)
     }
 }
 
@@ -57,12 +53,4 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
-}
-test{
-    systemProperty("file.encoding", "utf-8")
-}
-
-compileJava.options.encoding = 'UTF-8'
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
 }
